fix #176 - poi icon not centered in markers

--- a/app/styles/_icons.scss
+++ b/app/styles/_icons.scss
@@ -53,7 +53,8 @@
                 position: absolute;
                 top: 50%;
                 left: 50%;
-                transform: translate(-50%, -50%);
+                margin-left: -14px;
+                margin-top: -14px;
             }
         }
     }
